DOCS-5292 add missing property to SignUp; update useSignUp (#689)

--- a/docs/references/react/use-sign-up.mdx
+++ b/docs/references/react/use-sign-up.mdx
@@ -6,182 +6,62 @@ description: The useSignUp() hook gives you access to the SignUp object, which a
 
 The `useSignUp()` hook gives you access to the [`SignUp`](/docs/references/javascript/sign-up/sign-up) object, which allows you to check the current state of a sign-up. This is also useful for creating a custom sign-up flow.
 
-## Usage
+## `useSignUp()` returns
 
-<Tabs type="framework" items={["Next.js", "React"]}>
-  <Tab>
-    #### Check the current sign-up status
+| Name | Type | Description |
+| --- | --- | --- |
+| `isLoaded` | `boolean` | A boolean that is set to `false` until Clerk loads and initializes. |
+| `setActive()` | <code>(params: [SetActiveParams](#set-active-params)) => Promise\<void\></code> | A function that sets the active session. |
+| `setSession()` (deprecated) |  Deprecated. | Deprecated in favor of `setActive()`. |
+| `signUp` | [`SignUp`](/docs/references/javascript/sign-up/sign-up) | An object that contains the current sign-up attempt status and methods to create a new sign-up attempt. |
 
-    ```tsx filename="pages/sign-up.tsx"
-    import { useSignUp } from "@clerk/nextjs";
+### `SetActiveParams`
 
-    export default function SignUpStep() {
-      const { isLoaded, signUp } = useSignUp();
+| Name | Type | Description |
+| --- | --- | --- |
+| `session` | <code>[Session](/docs/references/javascript/session) \| string \| null</code> | The session resource or session ID (string version) to be set as active. If `null`, the current session is deleted. |
+| `organization` | <code>[Organization](/docs/references/javascript/organization/organization) \| string \| null</code> | The organization resource or organization ID (string version) to be set as active in the current session. If `null`, the currently active organization is removed as active. |
+| `beforeEmit?` | `(session?: Session \| null) => void \| Promise<any>` | Callback run just before the active session and/or organization is set to the passed object. Can be used to hook up for pre-navigation actions. |
 
-      if (!isLoaded) {
-        // handle loading state
-        return null;
-      }
+## How to use the `useSignUp()` hook
 
-      return <div>The current sign-up attempt status is {signUp.status}.</div>;
+### Check the current state of a sign-up with `useSignUp()`
+
+You can utilize the `useSignUp()` hook to check the current state of a sign-up.
+
+<CodeBlockTabs type="framework" options={["Next.js", "React"]}>
+  ```tsx filename="pages/sign-up.tsx"
+  import { useSignUp } from "@clerk/nextjs";
+
+  export default function SignUpStep() {
+    const { isLoaded, signUp } = useSignUp();
+
+    if (!isLoaded) {
+      // handle loading state
+      return null;
     }
-    ```
 
-    #### Sign up a user with a custom flow
+    return <div>The current sign-up attempt status is {signUp.status}.</div>;
+  }
+  ```
 
-    ```tsx filename="pages/signup.tsx"
-    import { useSignUp } from "@clerk/nextjs";
-    import { useState } from "react";
+  ```tsx filename="sign-up-step.tsx"
+  import { useSignUp } from "@clerk/clerk-react";
 
-    export default function SignUp() {
-      const [emailAddress, setEmailAddress] = useState("");
-      const [password, setPassword] = useState("");
+  export default function SignUpStep() {
+    const { isLoaded, signUp } = useSignUp();
 
-      const { isLoaded, signUp, setActive } = useSignUp();
-
-      if (!isLoaded) {
-        // handle loading state
-        return null;
-      }
-
-      async function submit(e) {
-        e.preventDefault();
-        // Check the sign up response to
-        // decide what to do next.
-        await signUp
-          .create({
-            emailAddress,
-            password,
-          })
-          .then((result) => {
-            if (result.status === "complete") {
-              console.log(result);
-              setActive({ session: result.createdSessionId });
-            } else {
-              console.log(result);
-            }
-          })
-          .catch((err) => console.error("error", err.errors[0].longMessage));
-      }
-
-      return (
-        <form onSubmit={submit}>
-          <div>
-            <label htmlFor="email">Email</label>
-            <input
-              type="email"
-              value={emailAddress}
-              onChange={(e) => setEmailAddress(e.target.value)}
-            />
-          </div>
-          <div>
-            <label htmlFor="password">Password</label>
-            <input
-              type="password"
-              value={password}
-              onChange={(e) => setPassword(e.target.value)}
-            />
-          </div>
-          <div>
-            <button>Sign up</button>
-          </div>
-        </form>
-      );
+    if (!isLoaded) {
+      // handle loading state
+      return null;
     }
-    ```
-  </Tab>
 
-  <Tab>
-    #### Check the current sign-up status
+    return <div>The current sign-up attempt status is {signUp.status}.</div>;
+  }
+  ```
+</CodeBlockTabs>
 
-    ```tsx filename="sign-up-step.tsx"
-    import { useSignUp } from "@clerk/clerk-react";
-
-    export default function SignUpStep() {
-      const { isLoaded, signUp } = useSignUp();
-
-      if (!isLoaded) {
-        // handle loading state
-        return null;
-      }
-
-      return <div>The current sign-up attempt status is {signUp.status}.</div>;
-    }
-    ```
-
-    #### Sign up a user with a custom flow
-
-    ```tsx filename="signup.tsx"
-    import { useSignUp } from "@clerk/clerk-react";
-    import { useState } from "react";
-
-    export default function SignUp() {
-      const [emailAddress, setEmailAddress] = useState("");
-      const [password, setPassword] = useState("");
-
-      const { isLoaded, signUp, setActive } = useSignUp();
-
-      if (!isLoaded) {
-        // handle loading state
-        return null;
-      }
-
-      async function submit(e) {
-        e.preventDefault();
-        // Check the sign up response to
-        // decide what to do next.
-        await signUp
-          .create({
-            emailAddress,
-            password,
-          })
-          .then((result) => {
-            if (result.status === "complete") {
-              console.log(result);
-              setActive({ session: result.createdSessionId });
-            } else {
-              console.log(result);
-            }
-          })
-          .catch((err) => console.error("error", err.errors[0].longMessage));
-      }
-
-      return (
-        <form onSubmit={submit}>
-          <div>
-            <label htmlFor="email">Email</label>
-            <input
-              type="email"
-              value={emailAddress}
-              onChange={(e) => setEmailAddress(e.target.value)}
-            />
-          </div>
-          <div>
-            <label htmlFor="password">Password</label>
-            <input
-              type="password"
-              value={password}
-              onChange={(e) => setPassword(e.target.value)}
-            />
-          </div>
-          <div>
-            <button>Sign up</button>
-          </div>
-        </form>
-      );
-    }
-    ```
-  </Tab>
-</Tabs>
-
-| Values | Description |
-| --- | --- |
-| `isLoaded` | A boolean that is set to `false` until Clerk loads and initializes. |
-| `setActive()` | A function that sets the active session. |
-| `setSession()` (deprecated) | Deprecated in favor of `setActive()`. |
-| `signUp` | An object that contains the current sign-up attempt status and methods to create a new sign-up attempt. |
-
-### Result status
+The `status` property of the `signIn` object can be one of the following values:
 
 | Values | Descriptiom |
 | --- | --- |
@@ -189,3 +69,6 @@ The `useSignUp()` hook gives you access to the [`SignUp`](/docs/references/javas
 | `abandoned` | The sign-up attempt will be abandoned if it was started more than 24 hours previously. |
 | `missing_requirements` | A requirement from the [Email, Phone, Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) settings is missing. For example, in the Clerk Dashboard, the Password setting is required but a password was not provided in the custom flow. |
 
+### Create a custom sign-up flow with `useSignUp()`
+
+You can also utilize the `useSignUp()` hook to build fully custom sign-up flows, if Clerk's pre-built components don't meet your specific needs or if you require more control over the authentication flow. Different sign-up flows include email and password, email and phone codes, email links, and multifactor (MFA). To learn more about using the `useSignUp()` hook to create custom flows, check out the [custom flow guides](https://clerk.com/docs/custom-flows/overview).
