apply code review suggestions

--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -9,12 +9,15 @@ description: A collection of utility functions and components in order to allow 
   The following authorization checks are predicated on a user having an active organization. Without this, they will likely always evaluate to false by default. Clerk's built-in [`<OrganizationSwitcher/>`](/docs/components/organization/organization-switcher) component and[`useOrganizationList().setActive({ organization: <orgId> })`](/docs/references/react/use-organization-list) method are two available options to set an organization as active for a user.
 </Callout>
 
-Clerk provides two kinds of helpers for authorization:
+In general, you should always verify whether or not a user is authorized to access sensitive information, important content, or exclusive features. The most secure way to implement authorization is by checking the active user's [role or permissions](/docs/organizations/roles-permissions#permissions).
 
-- `protect()` helpers are opinionated and will block additional processing for unauthorized users, either by not rendering children or by throwing errors. The [`<Protect>` component](/docs/components/protect) and the experimental [`auth().protect()`](/docs/references/nextjs/auth#protect) method fall into this category.
-- [`has()` helpers](/docs/references/nextjs/authentication-object#has) are more composable and flexible. They allow you to check and see what permissions a user *has*. You can decide what to do if the user lacks the permission.
+Clerk enables two broad approaches to role and permissions-based authorization:
 
-Both kinds of helpers can check a user's role and permissions. The recommended approach is to verify a user's permissions. Roles can be added and removed and their permissions changed. Authorizing by permissions is explicit.
+1. **Immediately blocking unauthorized users**.
+  - Use the [`<Protect>`](/docs/components/protect) component to prevent content from rendering if the active user is unauthorized.
+  - Call [`auth().protect()`](/docs/references/nextjs/auth#protect) to throw an error if the active user is unauthorized.
+2. **Configuring custom behavior for unauthorized users*.
+  - The [`has()`](/docs/references/nextjs/authentication-object#has) helper returns `false` if the active user lacks the role or permissions you're checking for. You can choose how your app responds without immediately throwing an error or preventing content from rendering.
 
 ## Authorization in Client Components
 
