--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -11,9 +11,42 @@ The `auth()` helper does require [Middleware](/docs/references/nextjs/auth-middl
 
 A Route Handler added to [`publicRoutes`](/docs/references/nextjs/auth-middleware#making-pages-public-using-public-routes) can still use the [`auth()`](/docs/references/nextjs/auth) helper to return information about the user or their authentication state, or to control access to some or all of the Route Handler.
 
-## Retrieving userId
+## Return type of `auth()`
 
-```tsx filename="app/page.[jsx/tsx]"
+`auth()` returns the [`Authentication`](/docs/references/nextjs/authentication-object) object with a few extra properties:
+
+- [`protect()`](#protect)
+- [`redirectToSignIn()`](#redirect-to-sign-in)
+
+### `protect()`
+
+You can use the `protect()` helper to check if a user is authorized to access something, such as a component or a route handler. 
+
+`protect()` will return the `Authentication` object if the user is authorized. If the user is not authorized, it will throw a `notFound` Next.js error.
+
+<Callout type="warning">
+  `auth().protect()` only works for App Router and is considered experimental.
+</Callout>
+
+`protect()` accepts the following parameters:
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `role` | `string` | The role to check for. |
+| `permission` | `string` | The permission to check for. |
+| `has` | <code>(isAuthorizedParams: CheckAuthorizationParamsWithCustomPermissions) => boolean</code> | A function that returns a boolean based on the permission or role provided as parameter. Can be used for authorization. See the dedicated [`has()`](/docs/references/nextjs/authentication-object#has) section for more information. |
+
+### `redirectToSignIn()`
+
+`redirectToSignIn()` is a method that redirects the user to the sign-in page. It accepts the following parameters:
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `returnBackUrl?` | `string \| URL` | The URL to redirect the user back to after they sign in. |
+
+## Use `auth()` to retrieve `userId`
+
+```tsx filename="app/page.tsx"
 import { auth } from '@clerk/nextjs';
 
 export default function Page() {
@@ -22,66 +55,93 @@ const { userId } : { userId: string | null } = auth();
 }
 ```
 
-## Data fetching
+## Use `auth()` for data fetching
 
 When using a Clerk integration, or if you need to send a JWT along to a server, you can use the `getToken` function.
 
-```tsx filename="app/api/example/route.[jsx/tsx]"
-import { NextResponse } from 'next/server';
+```tsx filename="app/api/example/route.ts"
 import { auth } from '@clerk/nextjs';
 
 export async function GET() {
   const {userId, getToken} = auth();
+
   if(!userId){
     return new Response("Unauthorized", { status: 401 });
   }
-  const token = await getToken({template: "supabase"});
-  // Fetch data from Supabase and return it.
-  const data = { supabaseData: 'Hello World' };
-  return NextResponse.json({ data });
+
+  try {
+    const token = await getToken({template: "supabase"});
+
+    // Add logic here to fetch data from Supabase and return it.
+  
+    const data = { supabaseData: 'Hello World' };
+  
+    return Response.json({ data });
+  } catch (error) {
+    return Response.json(error);
+  }
 }
 ```
 
-## Authorization
+## Use `auth()` to check if a user is authorized
 
-Use `has` in order to check if a user is authorized to access a component.
+`auth()` returns the [`Authentication`](/docs/references/nextjs/authentication-object#authentication-object) object, which includes the `has()` helper. `auth()` also returns the `protect()` helper.
 
-```tsx filename="app/page.[jsx/tsx]"
+`has()` and `protect()` can be used to check if a user is authorized to access certain parts of your application.
+
+### Use `has()` to check if a user is authorized
+
+Use the [`has()`](/docs/references/nextjs/authentication-object#has) helper in order to check if a user is authorized to access a component.
+
+In the following example:
+- `has()` is used to check if a user has the `org:team_settings:manage` permission.
+- If the user does not have the permission, `null` is returned.
+- If the user has the permission, the component will return the "Team Settings" heading.
+
+```tsx filename="app/page.tsx"
 import { auth } from '@clerk/nextjs';
 
 export default async function Page() {
   const { has } = auth();
 
-  const canManage = has({permission:"org:team_settings:manage"});
+  const canManage = has({ permission:"org:team_settings:manage" });
 
   if(!canManage) return null;  
 
-  return <h1v>Team Settings</h1>
+  return <h1>Team Settings</h1>
 }
 ```
 
-## Authorization with `protect`
+### Use `protect()` to check if a user is authorized
 
-<Callout type="warning" emoji="⚠️">
+Use the [`protect()`](#protect) helper to protect a route handler from unauthorized access.
+
+<Callout type="warning">
   `auth().protect()` only works for App Router and is considered experimental.
 </Callout>
 
-```tsx filename="app/api/route.[js/ts]"
+In the following example:
+- `protect()` helper is used to check if a user is authorized to access a route handler. 
+- If the user is not authorized, the `protect()` helper will throw a `notFound` Next.js error. 
+- If the user is authorized, the `protect()` helper will return the `Authentication` object, which has the `userId` property.
+
+```tsx filename="app/api/route.ts"
 import { auth } from "@clerk/nextjs";
 
 export const POST = () => {
-  const { userId } = auth().protect({permission: "org:team_settings:manage"});
+  const { userId } = auth().protect({ permission: "org:team_settings:manage" });
 
   return users.createTeam(userId);
 }
 ```
 
+## Use `auth()` to check your current user's role
 
-## Check your current user's role
+In some cases, you need to check your user's current organization role before displaying data or allowing certain actions to be performed. 
 
-In some cases, you need to check your user's current organization role before displaying data or allowing certain actions to be performed.
+Check the current user's role with the `orgRole` property of the `Authentication` object returned by `auth()`, as shown in the following example:
 
-```tsx filename="app/page.[jsx/tsx]"
+```tsx filename="app/page.tsx"
 import { auth } from '@clerk/nextjs';
 
 export default async function Page() {
@@ -93,14 +153,3 @@ export default async function Page() {
   )
 }
 ```
-
-
-## Return type of `auth`
-
-`auth` returns the [`Authentication`](/docs/references/nextjs/authentication-object) object with a few extra properties.
-
-### Properties
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `protect` | Function | Accepts a permission or a role key or a function with `has` as the first parameter. It will throw a `notFound` Next.js error if the user is unauthorized. Otherwise, it returns an `Authentication` object. |
