--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -23,6 +23,7 @@ The ClerkJS SDK provides some helper [methods](#methods) on the `User` object to
 | `fullName` | `string \| null` | The user's full name. |
 | `username` | `string \| null` | The user's username. |
 | `hasImage` | `boolean` | A getter boolean to check if the user has uploaded an image or one was copied from OAuth. Returns `false` if Clerk is displaying an avatar for the user. |
+| `profileImageUrl` (deprecated) | `string \| null` | Deprecated in favor of `image_url`. |
 | `imageUrl` | `string` | The URL of the user's profile image. |
 | `primaryEmailAddress` | [`EmailAddress`][email-ref] \| `null` | Information about the user's primary email address. |
 | `primaryEmailAddressId` | `string \| null` | The unique identifier for the `EmailAddress` that the user has set as primary. |
@@ -59,54 +60,11 @@ The ClerkJS SDK provides some helper [methods](#methods) on the `User` object to
 
 Updates the user's attributes. Use this method to save information you collected about the user.
 
+The appropriate settings must be enabled in the Clerk Dashboard for the user to be able to update their attributes. For example, if you want to use the `update({ firstName })` method, you must enable the **Name** setting. It can be found in the the Clerk Dashboard under **User & Authentication > Email, Phone, Username > [Personal information](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username).**
+
 ```typescript
 function update: (params: UpdateUserParams) => Promise<User>;
 ```
-
-<InjectKeys>
-
-{/* TODO (Alexis): Finish updating these code examples */}
-
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript
-  import Clerk from '@clerk/clerk-js';
-
-  // Initialize Clerk with your Clerk publishable key
-  const clerk = new Clerk(`{{pub_key}}`);
-  await clerk.load();
-  window.Clerk = clerk;
-
-  
-  ```
-
-  ```html
-  <!-- Add a <div> element with id="sign-in" to your HTML -->
-  <div id="sign-in"></div>
-
-  <script>
-    const script = document.createElement('script');
-    // Set your Clerk publishable key
-    script.setAttribute('data-clerk-publishable-key', `{{pub_key}}`);
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
-
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
-
-      const signInComponent = document.querySelector('#sign-in');
-
-      window.Clerk.openSignIn(signInComponent, {
-        appearance: {
-          baseTheme: dark
-        }
-      });
-    });
-    document.body.appendChild(script);
-  </script>
-  ```
-</CodeBlockTabs>
-
-</InjectKeys>
 
 #### `UpdateUserParams`
 
@@ -128,6 +86,51 @@ All props below are optional.
 | --- | --- |
 | <code>Promise\<User\></code> | This method returns a `Promise` which resolves with the current `User` object. |
 
+#### `update()` example
+
+In the following example, the user's first name is updated to "Test".
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
+  ```typescript
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk(`{{pub_key}}`);
+  await clerk.load();
+  window.Clerk = clerk;
+
+  await clerk.user.update({ firstName: "Test" })
+  ```
+
+  ```html
+  <script>
+    // Get your publishable key and frontend API URL from the Clerk Dashboard
+    const clerkPublishableKey = `{{pub_key}}`;
+    const frontendApi = '[your-domain].clerk.accounts.dev';
+    const version = '@latest'; // Set to appropriate version
+
+    // Creates asynchronous script
+    const script = document.createElement('script');
+    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
+    script.async = true;
+    script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+
+    // Adds listener to initialize ClerkJS after it's loaded
+    script.addEventListener('load', async function () {
+      await window.Clerk.load();
+
+      await window.Clerk.user.update({ firstName: "Test" })
+    });
+    document.body.appendChild(script);
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
 ### `delete()`
 
 Deletes the current user.
@@ -135,6 +138,49 @@ Deletes the current user.
 ```typescript
 function delete: () => Promise<void>;
 ```
+
+#### `delete()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
+  ```typescript
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk(`{{pub_key}}`);
+  await clerk.load();
+  window.Clerk = clerk;
+
+  await clerk.user.delete();
+  ```
+
+  ```html
+  <script>
+    // Get your publishable key and frontend API URL from the Clerk Dashboard
+    const clerkPublishableKey = `{{pub_key}}`;
+    const frontendApi = '[your-domain].clerk.accounts.dev';
+    const version = '@latest'; // Set to appropriate version
+
+    // Creates asynchronous script
+    const script = document.createElement('script');
+    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
+    script.async = true;
+    script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+
+    // Adds listener to initialize ClerkJS after it's loaded
+    script.addEventListener('load', async function () {
+      await window.Clerk.load();
+
+      await window.Clerk.user.delete();
+    });
+    document.body.appendChild(script);
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 ### `setProfileImage()`
 
@@ -177,6 +223,49 @@ function getSessions: () => Promise<SessionWithActivities[]>;
 | Type | Description |
 | --- | --- |
 | <code>Promise\<[SessionWithActivities](/docs/references/javascript/session-with-activities)[]\></code> | This method returns a `Promise` which resolves with an array of `SessionWithActivities` objects. |
+
+#### `getSessions()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
+  ```typescript
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk(`{{pub_key}}`);
+  await clerk.load();
+  window.Clerk = clerk;
+
+  await clerk.user.getSessions();
+  ```
+
+  ```html
+  <script>
+    // Get your publishable key and frontend API URL from the Clerk Dashboard
+    const clerkPublishableKey = `{{pub_key}}`;
+    const frontendApi = '[your-domain].clerk.accounts.dev';
+    const version = '@latest'; // Set to appropriate version
+
+    // Creates asynchronous script
+    const script = document.createElement('script');
+    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
+    script.async = true;
+    script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+
+    // Adds listener to initialize ClerkJS after it's loaded
+    script.addEventListener('load', async function () {
+      await window.Clerk.load();
+
+      await window.Clerk.user.getSessions();
+    });
+    document.body.appendChild(script);
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 ### `isPrimaryIdentification()`
 
