--- a/docs/custom-flows/overview.mdx
+++ b/docs/custom-flows/overview.mdx
@@ -38,11 +38,11 @@ There are 3 main steps a user must perform in order to complete a sign-in.
 
 The first step a user needs to make is to identify what account they'd like to sign in to. This is done with an identifier, which can either be an email address, a phone number, or a username.
 
-#### Factor one verification
+#### First factor verification
 
 Once a user is identified, they need to prove their identity. This is the process of "authenticating" the user. There's a number of strategies a user can use to perform authentication with the most basic being the humble password. Other authentication strategies, like passwordless sign-in, can be explored in the [sign-in and sign-up options](/docs/authentication/configuration/sign-up-sign-in-options#authentication-strategies) guide.
 
-#### Factor two verification (optional)
+#### Second factor verification (optional)
 
 This step only applies to users that have turned on two-factor authentication, also known as [multifactor authentication](/docs/custom-flows/mfa), for their user.
 
