--- a/docs/references/javascript/clerk/user-button.mdx
+++ b/docs/references/javascript/clerk/user-button.mdx
@@ -143,6 +143,7 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+| `showName` | `boolean` | Controls if the user name is displayed next to the user image button. |
 | `signInUrl` | `string` | The full URL or path to navigate to when the **Add another account** button is clicked. |
 | `userProfileMode` | `"modal" \| "navigation"` | Controls whether clicking the **Manage your account** button will cause the [`<UserProfile />`][userprofile-ref] component to open as a modal, or if the browser will navigate to the `userProfileUrl` where [`<UserProfile />`][userprofile-ref] is mounted as a page. |
 | `userProfileUrl` | `string` | The full URL or path leading to the user management interface. |
