apply code review suggestions

--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -65,7 +65,7 @@ CLERK_FRONTEND_API=[your-domain].clerk.accounts.dev
 
 </InjectKeys>
 
-> We suggest storing these keys in environment variables using an `.env` file or equivalent.
+> We suggest storing these keys in environment variables using a `.env` file or equivalent.
 
 ### Setup the Clerk class
 
