--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -80,7 +80,7 @@ Clerk's React SDK gives you access to prebuilt [components](/docs/components/ove
 
 ### Set environment keys
 
-In your React project's root folder, you may have an `.env` file alongside `package.json` and other configuration files. If you don't see it, create it.
+In your React project's root folder, create a `.env.local` file alongside `package.json` and other configuration files.
 
 Add the following code to your `.env.local` file to set your public key.
 
@@ -88,7 +88,7 @@ Add the following code to your `.env.local` file to set your public key.
 
 <InjectKeys>
 
-```sh filename=".env"
+```sh filename=".env.local"
 VITE_CLERK_PUBLISHABLE_KEY={{pub_key}}
 ```
 
