--- a/docs/quickstarts/fastify.mdx
+++ b/docs/quickstarts/fastify.mdx
@@ -34,7 +34,7 @@ If you're looking for a more complete example, check out our [Fastify example ap
 
 ### Set environment keys
 
-Below is an example of an `.env.local` file. 
+Below is an example of a `.env.local` file. 
 
 **Pro tip!** If you are signed into your Clerk Dashboard, your secret key should become visible by clicking on the eye icon. Otherwise, you can find your keys in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
