DOCS-699 fix broken injectkeys instances; add copy that explains injectkeys usage (#691)
Co-authored-by: Shaquil Hansford <liuqahs15@gmail.com>

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -48,7 +48,7 @@ pnpm add @clerk/nextjs
 
 ### Set environment keys
 
-In your Next.js project's root folder, you may have an `.env.local` file alongside `package.json` and other configuration files. If you don't see it, create it.
+In your Next.js project's root folder, you may have a `.env.local` file alongside `package.json` and other configuration files. If you don't see it, create it.
 
 Add the following code to your `.env.local` file to set your public and secret keys.
 
