--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -111,11 +111,11 @@ Install Clerk's React SDK by running the following command in your terminal:
 
 ### Set environment keys
 
-In your React project's root folder, you may have an `.env.local` file alongside `package.json` and other configuration files. If you don't see it, create it.
+In your React project's root folder, you may have a `.env.local` file alongside `package.json` and other configuration files. If you don't see it, create it.
 
 Add the following code to your `.env.local` file to set your public key.
 
-**Pro tip!** If you are signed into your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys), you can copy your publishable key below.
+**Pro tip!** If you are signed into your Clerk Dashboard, you can copy your publishable key below. Otherwise, you can find it in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
 <InjectKeys>
 
