add logic to code examples to check if user exists

--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -73,6 +73,7 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `username` | `string` | The user's username. |
+| `password` (deprecated) | `string` | The user's password.<br />This property is deprecated. This will be removed in the next major version (V5). Please use [`updatePassword(params)`](/docs/references/javascript/user/password-management#update-password) instead. |
 | `firstName` | `string` | The user's first name. |
 | `lastName` | `string` | The user's last name. |
 | `primaryEmailAddressId` | `string` | The unique identifier for the [`EmailAddress`][email-ref] that the user has set as primary. |
@@ -93,22 +94,32 @@ In the following example, the user's first name is updated to "Test".
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript
+  ```typescript {17}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
   const clerk = new Clerk(`{{pub_key}}`);
   await clerk.load();
-  window.Clerk = clerk;
 
-  await clerk.user.update({ firstName: "Test" })
+  if (!clerk.user) {
+    // Selects for <div id="app"> and adds a <div id="sign-in"> to it
+    document.querySelector<HTMLDivElement>(
+      "#app"
+    )!.innerHTML = `<div id="sign-in"></div>`;
+
+    const signInComponent = document.querySelector<HTMLDivElement>("#sign-in")!;
+
+    clerk.mountSignIn(signInComponent, {});
+  } else {
+    await clerk.user.update({ firstName: "Test" });
+  }
   ```
 
-  ```html
+  ```html {26}
   <script>
     // Get your publishable key and frontend API URL from the Clerk Dashboard
     const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApi = '[your-domain].clerk.accounts.dev';
+    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
     const version = '@latest'; // Set to appropriate version
 
     // Creates asynchronous script
@@ -116,13 +127,22 @@ In the following example, the user's first name is updated to "Test".
     script.setAttribute('data-clerk-frontend-api', frontendApi);
     script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
     // Adds listener to initialize ClerkJS after it's loaded
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      await window.Clerk.user.update({ firstName: "Test" })
+      if (!window.Clerk.user) {
+        // Selects for <div id="app"> and adds a <div id="sign-in"> to it
+        document.querySelector("#app").innerHTML = `<div id="sign-in"></div>`;
+
+        const signInComponent = document.querySelector("#sign-in");
+
+        window.Clerk.mountSignIn(signInComponent, {});
+      } else {
+        await window.Clerk.user.update({ firstName: "Test" })
+      }
     });
     document.body.appendChild(script);
   </script>
@@ -144,22 +164,32 @@ function delete: () => Promise<void>;
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript
+  ```typescript {17}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
   const clerk = new Clerk(`{{pub_key}}`);
   await clerk.load();
-  window.Clerk = clerk;
+  
+  if (!clerk.user) {
+    // Selects for <div id="app"> and adds a <div id="sign-in"> to it
+    document.querySelector<HTMLDivElement>(
+      "#app"
+    )!.innerHTML = `<div id="sign-in"></div>`;
 
-  await clerk.user.delete();
+    const signInComponent = document.querySelector<HTMLDivElement>("#sign-in")!;
+
+    clerk.mountSignIn(signInComponent, {});
+  } else {
+    await clerk.user.delete();
+  }
   ```
 
-  ```html
-  <script>
+  ```html {26}
+  <script> 
     // Get your publishable key and frontend API URL from the Clerk Dashboard
     const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApi = '[your-domain].clerk.accounts.dev';
+    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
     const version = '@latest'; // Set to appropriate version
 
     // Creates asynchronous script
@@ -167,13 +197,22 @@ function delete: () => Promise<void>;
     script.setAttribute('data-clerk-frontend-api', frontendApi);
     script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
     // Adds listener to initialize ClerkJS after it's loaded
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      await window.Clerk.user.delete();
+      if (!window.Clerk.user) {
+        // Selects for <div id="app"> and adds a <div id="sign-in"> to it
+        document.querySelector("#app").innerHTML = `<div id="sign-in"></div>`;
+
+        const signInComponent = document.querySelector("#sign-in");
+
+        window.Clerk.mountSignIn(signInComponent, {});
+      } else {
+        await window.Clerk.user.delete();
+      }
     });
     document.body.appendChild(script);
   </script>
@@ -229,22 +268,32 @@ function getSessions: () => Promise<SessionWithActivities[]>;
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript
+  ```typescript {17}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
   const clerk = new Clerk(`{{pub_key}}`);
   await clerk.load();
-  window.Clerk = clerk;
 
-  await clerk.user.getSessions();
+  if (!clerk.user) {
+    // Selects for <div id="app"> and adds a <div id="sign-in"> to it
+    document.querySelector<HTMLDivElement>(
+      "#app"
+    )!.innerHTML = `<div id="sign-in"></div>`;
+
+    const signInComponent = document.querySelector<HTMLDivElement>("#sign-in")!;
+
+    clerk.mountSignIn(signInComponent, {});
+  } else {
+    await clerk.user.getSessions();
+  }
   ```
 
-  ```html
+  ```html {26}
   <script>
     // Get your publishable key and frontend API URL from the Clerk Dashboard
     const clerkPublishableKey = `{{pub_key}}`;
-    const frontendApi = '[your-domain].clerk.accounts.dev';
+    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
     const version = '@latest'; // Set to appropriate version
 
     // Creates asynchronous script
@@ -252,13 +301,22 @@ function getSessions: () => Promise<SessionWithActivities[]>;
     script.setAttribute('data-clerk-frontend-api', frontendApi);
     script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
     script.async = true;
-    script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
     // Adds listener to initialize ClerkJS after it's loaded
-    script.addEventListener('load', async function () {
+    script.addEventListener("load", async function () {
       await window.Clerk.load();
 
-      await window.Clerk.user.getSessions();
+      if (!window.Clerk.user) {
+        // Selects for <div id="app"> and adds a <div id="sign-in"> to it
+        document.querySelector("#app").innerHTML = `<div id="sign-in"></div>`;
+
+        const signInComponent = document.querySelector("#sign-in");
+
+        window.Clerk.mountSignIn(signInComponent, {});
+      } else {
+        await window.Clerk.user.getSessions();
+      }
     });
     document.body.appendChild(script);
   </script>
